--- a/about.css
+++ b/about.css
@@ -7,7 +7,7 @@ body {
     margin: 0;
     padding: 0;
     background-color: #2c3e50;
-    color: #2c3e50;
+    color: #333;
     text-align: center;
 }
 
