--- a/act.css
+++ b/act.css
@@ -79,9 +79,10 @@ nav a:hover {
 }
 
 footer {
-    background: #222;
+    margin-top: 20px;
+    background: #34495e;
     color: white;
+    padding: 15px;
+    font-size: 14px;
     text-align: center;
-    padding: 20px;
-    margin-top: 30px;
 }
